--- a/ChristmasInThePark/res/layout/about.xml
+++ b/ChristmasInThePark/res/layout/about.xml
@@ -1,19 +1,20 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+        android:background="@drawable/snow" 
     >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
     android:orientation="vertical" >
 
     <ImageView
         android:accessibilityLiveRegion="none"
-        android:layout_width="fill_parent"
+        android:layout_width="150dp"
         android:layout_height="200dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:background="@drawable/about" />
@@ -21,16 +22,56 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginLeft="10dp"
         android:text="@string/Introduction"
         android:textSize="21sp" />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="Contact Us"
+        android:textSize="21sp" 
+        android:textStyle="bold" />
+    
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:text="@string/Contact"
+        android:textSize="16sp" />
+    
+    
+    
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="Become a Sponsor"
+        android:textSize="21sp" 
+        android:textStyle="bold" />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:text="@string/Sponsor"
+        android:textSize="16sp"/>
     
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Donate" />
+        android:text="Donate" 
+        android:textStyle="bold"/>
+    <Button
+        android:id="@+id/sponsor"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#823000"
+        android:text="Santa" 
+        android:textStyle="bold"/>
 
 </LinearLayout>
 </ScrollView>
