--- a/ChristmasInThePark/res/layout/about.xml
+++ b/ChristmasInThePark/res/layout/about.xml
@@ -42,11 +42,27 @@
         android:text="@string/Contact"
         android:textSize="16sp" />
     
+    <TextView
+        android:id="@+id/phone"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="Info: (408) 200-3800"
+        android:textSize="16sp" />
+    
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:text="@string/office"
+        android:textSize="16sp" />
     
     
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:text="Become a Sponsor"
         android:textSize="21sp" 
