--- a/ChristmasInThePark/res/layout/activity_tab_test.xml
+++ b/ChristmasInThePark/res/layout/activity_tab_test.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" 
+    android:orientation="vertical">
+<FrameLayout 
     android:id="@+id/fragment_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="wrap_content" />
+<Button
+        android:id="@+id/sponsor"
+        android:layout_alignParentBottom="true"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#823000"
+        android:drawableLeft="@drawable/ezgif"
+        android:drawingCacheQuality="auto"
+        android:text="Bright Green San Jose"
+        android:textSize="10sp"
+        android:textStyle="italic"/>
+</RelativeLayout>
