--- a/ChristmasInThePark/res/layout/events.xml
+++ b/ChristmasInThePark/res/layout/events.xml
@@ -11,9 +11,9 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-    android:layout_marginRight="25dp"
-    android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="20dp"
         android:text="@string/EventAdd"
         android:textStyle="bold"
         android:textSize="18sp" 
@@ -22,9 +22,12 @@
     <ListView android:id="@+id/listView"
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
-              android:layout_marginLeft="25dp"
-    android:layout_marginRight="25dp"
-    android:layout_marginTop="30dp"/>
+              android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    		  android:layout_marginTop="20dp"
+              android:background="@drawable/border_listview"
+              android:dividerHeight="3dip"
+               android:divider="@android:color/white"/>
     
 
     
