--- a/ChristmasInThePark/res/layout/about.xml
+++ b/ChristmasInThePark/res/layout/about.xml
@@ -1,6 +1,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    
         android:background="@drawable/snow" 
     >
 <LinearLayout
@@ -48,7 +49,6 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:text="Info: (408) 200-3800"
-        android:textColor="@color/blue" 
         android:textSize="16sp" />
     
     <TextView
@@ -80,15 +80,10 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="60dp"
         android:text="Donate" 
         android:textStyle="bold"/>
-    <Button
-        android:id="@+id/sponsor"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#823000"
-        android:text="Santa" 
-        android:textStyle="bold"/>
+
 
 </LinearLayout>
 </ScrollView>
