--- a/ChristmasInThePark/res/layout/events.xml
+++ b/ChristmasInThePark/res/layout/events.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-    
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -24,7 +22,8 @@
               android:layout_width="match_parent"
               android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    		  android:layout_marginTop="20dp"
+    		  android:layout_marginTop="10dp"
+    		  android:layout_marginBottom="60dp"
               android:background="@drawable/border_listview"
               android:dividerHeight="3dip"
                android:divider="@android:color/white"/>
