--- a/ChristmasInThePark/res/layout/list.xml
+++ b/ChristmasInThePark/res/layout/list.xml
@@ -4,5 +4,9 @@
         android:id="@+id/text1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp" />
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:textSize="18sp" />
 
