--- a/ChristmasInThePark/res/layout/tab.xml
+++ b/ChristmasInThePark/res/layout/tab.xml
@@ -2,14 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
- 
-    <TextView
-        android:id="@+id/tabtextview" 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        />
+    android:layout_height="match_parent" 
+
+    
+    >
+
+    <ImageButton
+        android:id="@+id/facebook"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/facebookicon" />
  
 </RelativeLayout>
