--- a/xmas-app-android/app/src/main/res/values/styles.xml
+++ b/xmas-app-android/app/src/main/res/values/styles.xml
@@ -4,5 +4,12 @@
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
-
+    <style name="buttonStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/redornament</item>
+        <item name="android:width">50dp</item>
+        <item name="android:height">100dp</item>
+        <item name="android:textColor">#FFCC66</item>
+    </style>
 </resources>
