Donation button done. working on FAQs

--- a/Xmas-app-Android/res/layout/activity_main.xml
+++ b/Xmas-app-Android/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
 
         <LinearLayout
             android1:layout_width="match_parent"
-            android1:layout_height="match_parent"
+            android1:layout_height="match_parent" 
             android1:orientation="vertical" >
 
             <TabWidget
@@ -37,37 +37,6 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/background"
                     android:orientation="vertical" >
-
-                    <Button
-				        android:text="Vote"
-				        android:id="@+id/vote"
-				        style="@style/buttonStyle"
-				        android:layout_toLeftOf="@+id/involved"
-				        android:layout_alignTop="@+id/sponsors"
-				        android:layout_alignRight="@+id/involved"
-				        android:layout_alignEnd="@+id/involved"
-				        android:layout_marginRight="56sp"
-						android:textStyle="bold"
-				         />
-				
-				    <Button
-				        android:text="Sponsors"
-				        android:id="@+id/sponsors"
-				        style="@style/buttonStyle"
-				        android:layout_toRightOf="@+id/vote"
-				        android:layout_marginLeft="50sp"
-				        android:layout_centerVertical="true"
-				        android:layout_alignLeft="@+id/involved"
-				        android:layout_alignStart="@+id/involved"
-				        android:textStyle="bold" />
-				    <Button
-				        android:text="Get Involved"
-				        android:id="@+id/involved"
-				        style="@style/buttonStyle"
-				        android:layout_alignParentTop="true"
-				        android:layout_centerHorizontal="true"
-				        android:layout_marginTop="60sp"
-				        android:textStyle="bold" />
 				    <Button
 				        android:text="Event Schedule"
 				        android:id="@+id/schedule"
@@ -92,6 +61,45 @@
 				        android:layout_toRightOf="@+id/vote"
 				        android:layout_toEndOf="@+id/vote"
 				        android:textStyle="bold" />
+
+				    <Button
+				        android1:id="@+id/vote"
+				        style="@style/buttonStyle"
+				        android1:layout_alignEnd="@+id/involved"
+				        android1:layout_alignRight="@+id/involved"
+				        android1:layout_below="@+id/involved"
+				        android1:layout_marginRight="51dp"
+				        android1:layout_marginTop="11dp"
+				        android1:text="Vote"
+				        android1:textStyle="bold" />
+
+				    <Button
+				        android1:id="@+id/sponsors"
+				        style="@style/buttonStyle"
+				        android1:layout_above="@+id/info"
+				        android1:layout_alignLeft="@+id/involved"
+				        android1:layout_alignStart="@+id/involved"
+				        android1:layout_marginLeft="40dp"
+				        android1:text="Sponsors"
+				        android1:textStyle="bold" />
+
+				    <Button
+				        android1:id="@+id/involved"
+				        style="@style/buttonStyle"
+				        android1:layout_alignParentTop="true"
+				        android1:layout_centerHorizontal="true"
+				        android1:layout_marginTop="92dp"
+				        android1:text="Get Involved" />
+
+				    <Button
+				        android1:id="@+id/donationButton"
+				        android1:layout_width="120dp"
+				        android1:layout_height="120dp"
+				        android1:layout_alignParentRight="true"
+				        android1:layout_alignParentTop="true"
+				        android1:adjustViewBounds="true"
+				        android1:background="@drawable/bell"
+				        android1:scaleType="fitCenter" />
 
                 </RelativeLayout>
 
