--- a/Xmas-app-Android/res/layout/activity_vistor_info.xml
+++ b/Xmas-app-Android/res/layout/activity_vistor_info.xml
@@ -2,11 +2,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/snowbackground"
     tools:context="${relativePackage}.${activityClass}" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <Button
+        android:id="@+id/button1"
+        style="@style/greenbuttonStyle"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="23dp"
+        android:text="FQAs" />
 
+    <Button
+        android:id="@+id/Button03"
+        style="@style/greenbuttonStyle"
+        android:layout_alignLeft="@+id/Button05"
+        android:layout_below="@+id/button1"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="26dp"
+        android:text="@string/eats" />
+
+    <Button
+        android:id="@+id/Button01"
+        style="@style/greenbuttonStyle"
+        android:layout_above="@+id/Button03"
+        android:layout_toRightOf="@+id/button1"
+        android:text="@string/parking" />
+
+    <Button
+        android:id="@+id/Button02"
+        style="@style/greenbuttonStyle"
+        android:layout_above="@+id/Button03"
+        android:layout_toRightOf="@+id/Button01"
+        android:text="Stores" />
+
+    <Button
+        android:id="@+id/Button05"
+        style="@style/greenbuttonStyle"
+        android:layout_below="@+id/Button03"
+        android:layout_marginTop="21dp"
+        android:layout_toLeftOf="@+id/Button06"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/Button06"
+        style="@style/greenbuttonStyle"
+        android:layout_alignTop="@+id/Button05"
+        android:layout_toLeftOf="@+id/Button02"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/Button07"
+        style="@style/greenbuttonStyle"
+        android:layout_alignTop="@+id/Button06"
+        android:layout_toRightOf="@+id/Button06"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/Button04"
+        style="@style/greenbuttonStyle"
+        android:layout_alignTop="@+id/Button03"
+        android:layout_marginLeft="23dp"
+        android:layout_toRightOf="@+id/Button03"
+        android:text="Partners" />
+	
 </RelativeLayout>
