--- a/Xmas-app-Android/res/layout/activity_get_involved.xml
+++ b/Xmas-app-Android/res/layout/activity_get_involved.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="involved" />
+	<WebView
+        android:id="@+id/involvedView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
