--- a/Xmas-app-Android/res/values/styles.xml
+++ b/Xmas-app-Android/res/values/styles.xml
@@ -34,4 +34,10 @@
         <item name="android:textColor">#FFCC66</item>
 		 <item name="android:textSize">22sp</item>
     </style>
+    <style name="topbuttonStyle">
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:adjustViewBounds">true</item>
+    </style>
 </resources>
