--- a/Xmas-app-Android/res/layout/activity_main.xml
+++ b/Xmas-app-Android/res/layout/activity_main.xml
@@ -42,74 +42,96 @@
 
                     <ImageView
                         android1:id="@+id/ivBackground"
-                        android1:layout_width="wrap_content"
-                        android1:layout_height="wrap_content"
-                        android1:layout_centerHorizontal="true"
-                        android1:layout_centerVertical="true"
-                        android1:scaleType="center"
-                        android1:src="@drawable/background" />
+                        style="@style/imgBackground"
+                        android1:layout_width="match_parent"
+                        android1:layout_height="match_parent" />
 
-                    <ImageButton
-                        android1:id="@+id/ImageButton1"
-                        android1:layout_width="120dp"
-                        android1:layout_height="144dp"
+                    <Button
+                        android1:id="@+id/btnGetInvolved"
                         android1:layout_alignParentTop="true"
                         android1:layout_centerHorizontal="true"
                         android1:layout_marginTop="48dp"
                         android1:scaleType="fitCenter"
-                        android1:src="@drawable/redornamentlarge" />
+                        android1:text="Get Involved"
+                        style="@style/bsOrnamentRed" />
 
-                    <ImageButton
-                        android1:id="@+id/ImageButton2"
-                        android1:layout_width="120dp"
-                        android1:layout_height="144dp"
-                        android1:layout_below="@+id/ImageButton1"
-                        android1:layout_marginRight="-72dp"
-                        android1:layout_marginTop="-48dp"
-                        android1:layout_toLeftOf="@+id/ImageButton1"
+                    <Button
+                        android1:id="@+id/btnVote"
+                        style="@style/bsOrnamentRed"
+                        android1:layout_below="@+id/btnGetInvolved"
+                        android1:layout_marginRight="-48dp"
+                        android1:layout_marginTop="-24dp"
+                        android1:layout_toLeftOf="@+id/btnGetInvolved"
                         android1:scaleType="fitCenter"
-                        android1:src="@drawable/redornamentlarge" />
+                        android1:text="Vote" />
 
-                    <ImageButton
-                        android1:id="@+id/ImageButton01"
-                        android1:layout_width="120dp"
-                        android1:layout_height="144dp"
-                        android1:layout_alignTop="@+id/ImageButton2"
+                    <Button
+                        android1:id="@+id/btnSponsors"
+                        style="@style/bsOrnamentRed"
+                        android1:layout_alignTop="@+id/btnVote"
                         android1:layout_marginLeft="48dp"
-                        android1:layout_toRightOf="@+id/ImageButton2"
+                        android1:layout_toRightOf="@+id/btnVote"
                         android1:scaleType="fitCenter"
-                        android1:src="@drawable/redornamentlarge" />
+                        android1:text="Sponsors" />
 
-                    <ImageButton
-                        android1:id="@+id/ImageButton02"
-                        android1:layout_width="120dp"
-                        android1:layout_height="144dp"
-                        android1:layout_below="@+id/ImageButton2"
-                        android1:layout_marginRight="-72dp"
-                        android1:layout_marginTop="-48dp"
-                        android1:layout_toLeftOf="@+id/ImageButton2"
+                    <Button
+                        android1:id="@+id/btnEventSchedule"
+                        style="@style/bsOrnamentRed"
+                        android1:layout_below="@+id/btnVote"
+                        android1:layout_marginRight="-48dp"
+                        android1:layout_marginTop="-24dp"
+                        android1:layout_toLeftOf="@+id/btnVote"
                         android1:scaleType="fitCenter"
-                        android1:src="@drawable/redornamentlarge" />
+                        android1:text="Event Schedule" />
 
-                    <ImageButton
-                        android1:id="@+id/ImageButton03"
-                        android1:layout_width="120dp"
-                        android1:layout_height="144dp"
-                        android1:layout_alignTop="@+id/ImageButton02"
+                    <Button
+                        android1:id="@+id/btnVisitorInfo"
+                        style="@style/bsOrnamentRed"
+                        android1:layout_alignTop="@+id/btnEventSchedule"
                         android1:layout_marginLeft="48dp"
-                        android1:layout_toRightOf="@+id/ImageButton02"
+                        android1:layout_toRightOf="@+id/btnEventSchedule"
                         android1:scaleType="fitCenter"
-                        android1:src="@drawable/redornamentlarge" />
+                        android1:text="Visitor Info" />
 
-                    <ImageButton
-                        android1:id="@+id/ImageButton04"
-                        android1:layout_width="120dp"
-                        android1:layout_height="144dp"
-                        android1:layout_alignTop="@+id/ImageButton02"
-                        android1:layout_marginLeft="144dp"
-                        android1:layout_toRightOf="@+id/ImageButton02"
+                    <Button
+                        android1:id="@+id/btnParkMap"
+                        style="@style/bsOrnamentRed"
+                        android1:layout_alignTop="@+id/btnEventSchedule"
+                        android1:layout_toRightOf="@+id/btnVisitorInfo"
                         android1:scaleType="fitCenter"
-                        android1:src="@drawable/redornamentlarge" />
+                        android1:text="Park Map" />
+
+                    <Button
+                        android1:id="@+id/btnFacebook"
+                        style="@style/bsFacebook"
+                        android1:layout_toLeftOf="@+id/btnTwitter" />
+
+                    <Button
+                        android1:id="@+id/btnTwitter"
+                        style="@style/bsTwitter"
+                        android1:layout_toLeftOf="@+id/btnSiteSocial" />
+
+                    <Button
+                        android1:id="@+id/btnSiteSocial"
+                        style="@style/bsSiteSocial"
+                        android1:layout_alignParentTop="true"
+                        android1:layout_centerInParent="true" />
+
+                    <Button
+                        android1:id="@+id/btnPinterest"
+                        style="@style/bsPinterest"
+                        android1:layout_toRightOf="@+id/btnSiteSocial" />
+
+                    <Button
+                        android1:id="@+id/btnYouTube"
+                        style="@style/bsYouTube"
+                        android1:layout_toRightOf="@+id/btnPinterest" />
+
+                    <Button
+                        android1:id="@+id/btnDonate"
+                        style="@style/bsDonate"
+                        android1:layout_below="@+id/btnSiteSocial"
+                        android1:layout_toRightOf="@+id/btnGetInvolved" />
                     
                 </RelativeLayout>
 
@@ -118,10 +140,12 @@
                     android1:orientation="vertical"
                     android1:layout_width="match_parent"
                     android1:layout_height="match_parent" >
+
                     <WebView
-				        android:id="@+id/AboutUswebView"
-				        android:layout_width="match_parent"
-				        android:layout_height="match_parent" />
+                        android:id="@+id/wvAboutUs"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
                 </LinearLayout>
 
             </FrameLayout>
