--- a/Xmas-app-Android/res/layout/activity_visitor_info.xml
+++ b/Xmas-app-Android/res/layout/activity_visitor_info.xml
@@ -8,7 +8,7 @@
 
     <Button
         android:id="@+id/FAQsButton"
-        style="@style/greenbuttonStyle"
+        style="@style/bsOrnamentGreen"
         android:layout_alignTop="@+id/ParkingButton"
         android:layout_toLeftOf="@+id/ParkingButton"
         android:layout_toStartOf="@+id/ParkingButton"
@@ -16,7 +16,7 @@
         android:textStyle="bold" />
     <Button
         android:id="@+id/ParkingButton"
-        style="@style/greenbuttonStyle"
+        style="@style/bsOrnamentGreen"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="55dp"
@@ -25,7 +25,7 @@
 
     <Button
         android:id="@+id/StoresButton"
-        style="@style/greenbuttonStyle"
+        style="@style/bsOrnamentGreen"
         android:layout_alignTop="@+id/ParkingButton"
         android:layout_toRightOf="@+id/ParkingButton"
         android:text="Stores"
@@ -33,7 +33,7 @@
 
     <Button
         android:id="@+id/EatsTreatButton"
-        style="@style/greenbuttonStyle"
+        style="@style/bsOrnamentGreen"
         android:layout_below="@+id/ParkingButton"
         android:layout_marginLeft="17dp"
         android:layout_toRightOf="@+id/PartnerButton"
@@ -42,7 +42,7 @@
 
     <Button
         android:id="@+id/PartnerButton"
-        style="@style/greenbuttonStyle"
+        style="@style/bsOrnamentGreen"
         android:layout_alignLeft="@+id/FAQsButton"
         android:layout_alignTop="@+id/EatsTreatButton"
         android:layout_marginLeft="37dp"
