--- a/Xmas-app-Android/res/values/styles.xml
+++ b/Xmas-app-Android/res/values/styles.xml
@@ -1,43 +1,48 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-    </style>
+	<!-- Base application theme, dependent on API level. This theme is replaced 
+		by AppBaseTheme from res/values-vXX/styles.xml on newer devices. -->
+	<style name="AppBaseTheme" parent="android:Theme.Light">
+		<!-- Theme customizations available in newer API levels can go in res/values-vXX/styles.xml, 
+			while customizations related to backward-compatibility can go here. -->
+	</style>
 
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
-	<style name="buttonStyle">
-        <item name="android:layout_width">90dp</item>
-        <item name="android:layout_height">110dp</item>
-        <item name="android:background">@drawable/redornamentlarge</item>
-        <item name="android:scaleType">fitCenter</item>
-        <item name="android:adjustViewBounds">true</item>
-        <item name="android:textColor">#FFCC66</item>
-		 <item name="android:textSize">22sp</item>
-    </style>
-    <style name="greenbuttonStyle">
-        <item name="android:layout_width">90dp</item>
-        <item name="android:layout_height">110dp</item>
-        <item name="android:background">@drawable/greenornamentlarge</item>
-        <item name="android:scaleType">fitCenter</item>
-        <item name="android:adjustViewBounds">true</item>
-        <item name="android:textColor">#FFCC66</item>
-		 <item name="android:textSize">22sp</item>
-    </style>
-    <style name="topbuttonStyle">
-        <item name="android:layout_width">60dp</item>
-        <item name="android:layout_height">60dp</item>
-        <item name="android:scaleType">fitCenter</item>
-        <item name="android:adjustViewBounds">true</item>
-    </style>
+	<!-- Application theme. -->
+	<style name="AppTheme" parent="AppBaseTheme">
+		<!-- All customizations that are NOT specific to a particular API-level 
+			can go here. -->
+	</style>
+	<style name="bsOrnamentBase">
+		<item name="android:layout_width">96dp</item>
+		<item name="android:layout_height">120dp</item>
+		<item name="android:scaleType">fitCenter</item>
+		<item name="android:adjustViewBounds">true</item>
+		<item name="android:textColor">#FFCC66</item>
+		<item name="android:textSize">24sp</item>
+	</style>
+	<style name="bsOrnamentRed" parent="bsOrnamentBase">
+		<item name="android:background">@drawable/redornamentlarge</item>
+	</style>
+	<style name="bsOrnamentGreen" parent="bsOrnamentBase">
+		<item name="android:background">@drawable/greenornamentlarge</item>
+	</style>
+	<style name="bsSocialBase">
+		<item name="android:layout_width">48dp</item>
+		<item name="android:layout_height">48dp</item>
+		<item name="android:scaleType">fitCenter</item>
+		<item name="android:adjustViewBounds">true</item>
+		<item name="android:layout_marginLeft">4dp</item>
+		<item name="android:layout_marginRight">4dp</item>
+	</style>
+	<style name="bsFacebook" parent="bsSocialBase"><item name="android:background">@drawable/facebook</item></style>
+	<style name="bsTwitter" parent="bsSocialBase"><item name="android:background">@drawable/twitter</item></style>
+	<style name="bsSiteSocial" parent="bsSocialBase"><item name="android:background">@drawable/citp</item></style>
+	<style name="bsPinterest" parent="bsSocialBase"><item name="android:background">@drawable/pinterest</item></style>
+	<style name="bsYouTube" parent="bsSocialBase"><item name="android:background">@drawable/youtube</item></style>
+	<string name="fontOrnamentButton">ornament_type.ttf</string>
+	<style name="bsDonate"><item name="android:background">@drawable/donate</item><item name="android:layout_width">108dp</item><item name="android:layout_height">93dp</item><item name="android:scaleType">fitCenter</item><item name="android:adjustViewBounds">true</item></style>
+	<style name="imgBackground"><item name="android:src">@drawable/background</item>
+	</style>
+
 </resources>
